2004-05-31  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: fixlets for windows.

2004-05-29  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: export CC instead of passing it to libgc/configure.

2004-05-28  Duncan Mak  <duncan@ximian.com>

	* runtime/Makefile.am: 
	* scripts/Makefile.am: Include mono-find-provides and
	mono-find-requires.
	
	* scripts/mono-find-provides.in:
	* scripts/mono-find-requires.in: New wrapper scripts.

2004-05-27  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Pass CC to libgc configure.

2004-05-27  Gert Driesen (drieseng@users.sourceforge.net)

	* monowiz.win32.nsi: normalized line-endings to unix (LF)

2004-05-27  Gert Driesen (drieseng@users.sourceforge.net)

	* monowiz.win32.nsi: do not include mono subdirectory in
	MonoConfigDir registry key, to match batch files

2004-05-26  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* data/DefaultWsdlHelpGenerator.aspx: fixed querystring attribute
	values. Now they are URlEncoded.

	* data/browscap.ini.gz: updated.

2004-05-26  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (mcs-do-basic-build): No need to set MCS here.
	* runtime/net_1_1/Makefile.am (gac_assemblies_list): Update to
	reflect new names for nunit.util and nunit.framework.  Add
	nunit.core.
	* runtime/net_2_0/Makefile.am (gac_assemblies_list): Likewise.

2004-05-25 Ben Maurer  <bmaurer@users.sourceforge.net>

	* config.h.in: remove

2004-05-25 18:30 CET Patrik Torstensson <totte@hiddenpeaks.com>

	* configure.in: Check for trunc instead of truncl (HAVE_TRUNC)

2004-05-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Makefile.am:
	* monowiz.win32.nsi: improved windows installer script.

2004-05-21  Raja R Harinath  <rharinath@novell.com>

	* README: Update to include instructions for the various new
	bootstrap-like targets.

2004-05-20  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (get-monolite-latest, monolite-bootstrap):
	New bootstrap targets to build from monolite.