@@ -1,3 +1,9 @@
+2004-06-01  Raja R Harinath  <rharinath@novell.com>
+
+	* Makefile.am (bootstrap,faststrap,fasterstrap): Refactor.
+	Fix 'faststrap' to be corlib-version-change-safe.
+	(one-stage-strap,two-stage-strap,three-stage-strap): Remove.
+
 2004-05-31  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* configure.in: fixlets for windows.
